<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/word_screen_tab_1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_country"
                style="@style/title_headers" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <ImageView
                    android:id="@+id/country_image"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.20"
                    app:srcCompat="@drawable/korea" />
                <TextView
                    android:id="@+id/Country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/default_gap"
                    android:layout_weight="0.60"
                    android:text="country"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:layout_width="250dp"
                android:layout_height="2dp"
                style="@style/horizontal_divider" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_short_def"
                style="@style/title_headers" />

            <TextView
                android:id="@+id/short_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:scrollbars="vertical"
                android:text="shortdef"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/default_gap"/>

            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                style="@style/horizontal_divider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_characteristic"
                style="@style/title_headers"/>
            <TextView
                android:id="@+id/characteristics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:scrollbars="vertical"
                android:text="characteristics"
                android:textSize="18dp"
                android:layout_marginBottom="15dp"/>

            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                style="@style/horizontal_divider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tag"
                style="@style/title_headers" />
            <TextView
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:scrollbars="vertical"
                android:text="tag"
                android:textSize="18dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>